--- a/dogs.html
+++ b/dogs.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dogs.css">
   </head>
   <body>
     <nav>
@@ -19,7 +19,17 @@
     </nav>
     <div class="content">
         <div class="main-content">
-            <!-- You can replace content and add CSS for it -->
+            <div class="grid-container">
+              <div class="grid-item"><img src="img/dog1.jpg" alt="Dog 1"></div>
+              <div class="grid-item"><img src="img/dog2.jpg" alt="Dog 2"></div>
+              <div class="grid-item"><img src="img/dog3.jpg" alt="Dog 3"></div>
+              <div class="grid-item"><img src="img/dog4.jpg" alt="Dog 4"></div>
+              <div class="grid-item"><img src="img/dog5.jpg" alt="Dog 5"></div>
+              <div class="grid-item"><img src="img/dog6.jpg" alt="Dog 6"></div>
+              <div class="grid-item"><img src="img/dog7.jpg" alt="Dog 7"></div>
+              <div class="grid-item"><img src="img/dog8.jpg" alt="Dog 8"></div>
+              <div class="grid-item"><img src="img/dog9.jpg" alt="Dog 9"></div>
+            </div>
         </div>
         <div class="aside">
             <aside >
