--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,8 @@
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="dogs.html">Dogs</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
 
       <div class="search-box">
