--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="aside">
             <aside >
                 <h2>Aside Area</h2>
-                <p>This is the aside area that covers 20% of the screen width.</p>
+                <p>This is the aside area that covers some space of the screen.</p>
             </aside>
         </div>
         
