--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,15 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/contact.css">
+    <script src="js/script.js"></script>
   </head>
   <body>
     <nav>
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="dogs.html">Dogs</a></li>
@@ -38,7 +44,7 @@
         <div class="aside">
             <aside >
                 <h2>Aside Area</h2>
-                <p>This is the aside area that covers 20% of the screen width.</p>
+                <p>This is the aside area that covers some space of the screen.</p>
             </aside>
         </div>
         
