--- a/index.html
+++ b/index.html
@@ -2,10 +2,16 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
+    <script src="js/script.js"></script>
   </head>
   <body>
     <nav>
+      <div class="menu-toggle">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="dogs.html">Dogs</a></li>
@@ -18,21 +24,20 @@
       </div>
     </nav>
     <div class="content">
-        <div class="main-content">
-            <!-- You can replace content and add CSS for it -->
-        </div>
-        <div class="aside">
-            <aside >
-                <h2>Aside Area</h2>
-                <p>This is the aside area that covers some space of the screen.</p>
-            </aside>
-        </div>
-        
+      <div class="main-content">
+        <!-- You can replace content and add CSS for it -->
+      </div>
+      <div class="aside">
+        <aside>
+          <h2>Aside Area</h2>
+          <p>This is the aside area that covers some space of the screen.</p>
+        </aside>
+      </div>
     </div>
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Gradon Rong. All rights reserved.</p>
-        </div>
+      <div class="footer-content">
+        <p>&copy; 2024 Gradon Rong. All rights reserved.</p>
+      </div>
     </footer>
   </body>
 </html>
